# SimpleAgenticSystem

./: .env.example  README.md  pyproject.toml
.claude/: settings.json
examples/: minimal_agent.py  run_webui.py  self_repair_demo.py
src/simple_agentic_system/: __init__.py  config.py
src/simple_agentic_system/agent/: __init__.py  as_tool.py  core.py
src/simple_agentic_system/context/: __init__.py  history.py  manager.py  memory.py  session.py  state.py
src/simple_agentic_system/llm/: __init__.py  base.py  errors.py  policy.py
src/simple_agentic_system/llm/providers/: __init__.py  anthropic.py  fake.py  openai.py  openai_compatible.py  openrouter.py
src/simple_agentic_system/observability/: __init__.py  langfuse_tracer.py  tracer.py
src/simple_agentic_system/prompt/: __init__.py  builtins.py  enricher.py
src/simple_agentic_system/sandbox/: __init__.py  exec.py  pool.py  session_registry.py
src/simple_agentic_system/sandbox/bridge/: __init__.py  codegen.py  runtime.py
src/simple_agentic_system/tools/: __init__.py  base.py  decorators.py  mcp_adapter.py  registry.py  retrying.py  schema.py  server.py
src/simple_agentic_system/tools/builtin/: __init__.py  calculator.py  echo.py
src/simple_agentic_system/webui/: app.py  tracing.py
src/simple_agentic_system/webui/static/: index.html
tests/: test_agent_as_tool.py  test_agent_loop.py  test_bridge_codegen.py  test_context_manager.py  test_llm_policy.py  test_observability.py  test_retrying_tool.py  test_tool_registry.py  test_tools_mcp_bridge.py
