[project]
name = "simple-agentic-system"
version = "0.1.0"
description = "Modular agentic framework skeleton"
authors = [
    { name = "Malik1998", email = "gazizullin.malik2010@yandex.ru" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "openai>=1.55",
    "mcp>=1.1",
    "docker>=7.1",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "simple-agentic-system[langfuse]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
